[package]
name = "snappy"
version = "0.3.0"
authors = ["Nick Frasser <nick@nfrasser.com>"]
description = "snappy compression/decompression for browsers and Node.js, powered by WebAssembly"
repository = "https://github.com/nfrasser/snappy.git"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
dev = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
snap = "1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
